[gd_scene load_steps=5 format=3 uid="uid://bfmbbkd3ry0wl"]

[ext_resource type="PackedScene" uid="uid://cycxpbnmev0v5" path="res://scenes/player.tscn" id="1_alr03"]
[ext_resource type="Script" path="res://scripts/node_2d.gd" id="1_ys1ef"]
[ext_resource type="PackedScene" uid="uid://di2cyya0iuej0" path="res://scenes/enemy.tscn" id="2_00411"]

[sub_resource type="Curve2D" id="Curve2D_qmeu8"]

[node name="main" type="Node2D"]
script = ExtResource("1_ys1ef")
enemy_scene = ExtResource("2_00411")

[node name="player" parent="." instance=ExtResource("1_alr03")]

[node name="enemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="scoreTimer2" type="Timer" parent="."]

[node name="startTimer3" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]

[node name="enemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_qmeu8")

[node name="enemyPathFollow" type="PathFollow2D" parent="enemyPath"]

[connection signal="hit" from="player" to="." method="_on_player_hit"]
[connection signal="timeout" from="enemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="scoreTimer2" to="." method="_on_score_timer_2_timeout"]
[connection signal="timeout" from="startTimer3" to="." method="_on_start_timer_3_timeout"]
